--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "Jhon's Weather App",
+            "name": "JhonWeatherApp",
             "buildIdentifier": "jhonweatherapp_electron",
             "publishers": "Jhon"            
           }
